chore: Optimization changes